@@ -1,5 +1,6 @@
 using Terraria;
 using Terraria.ID;
+using Terraria.ModLoader;
 
 namespace AssortedCrazyThings.Items.Fun
 {
@@ -14,13 +15,34 @@ namespace AssortedCrazyThings.Items.Fun
 			Item.shoot = ProjectileID.None;
 			Item.damage = 40;
 			Item.UseSound = SoundID.Item11;
-			//item.shoot = ProjectileID.RocketII;
 			Item.value = Item.sellPrice(gold: 4);
 		}
 
 		public override void AddRecipes()
 		{
 			CreateRecipe(1).AddIngredient(ItemID.RocketI, 3996).AddTile(TileID.CrystalBall).Register();
+		}
+	}
+
+	//Fix for Celebration Mk2 and other fancy launchers
+	[Content(ContentType.Weapons)]
+	public class InfinityRocketSystem : AssSystem
+	{
+		public override void PostSetupContent()
+		{
+			var itemType = ModContent.ItemType<InfinityRocket>();
+			foreach (var pair in AmmoID.Sets.SpecificLauncherAmmoProjectileMatches)
+			{
+				var dict = pair.Value;
+				if (dict.TryGetValue(ItemID.RocketI, out var proj))
+				{
+					dict[itemType] = proj;
+				}
+				else
+				{
+					dict[itemType] = ProjectileID.RocketI;
+				}
+			}
 		}
 	}
 }
